core/tests/ui/store/nested_ref_enum_child_unsupported.stderr
error[E0277]: the trait bound `PolyChild: Bridge` is not satisfied
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ unsatisfied trait bound
   |
help: the trait `ResolveRecordId` is not implemented for `PolyChild`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:6:1
   |
 6 | enum PolyChild {
   | ^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveRecordId`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ `ParentModel`
   |
  ::: src/model/meta.rs
   |
   | impl ResolveRecordId for RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `appdb::prelude::RecordId`
...
   | impl ResolveRecordId for &RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&appdb::prelude::RecordId`
   = note: required for `PolyChild` to implement `Bridge`
   = note: required for `PolyChild` to implement `ForeignShape`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PolyChild: Bridge` is not satisfied
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ unsatisfied trait bound
   |
help: the trait `Crud` is not implemented for `PolyChild`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:6:1
   |
 6 | enum PolyChild {
   | ^^^^^^^^^^^^^^
help: the trait `Crud` is implemented for `ParentModel`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^
   = note: required for `PolyChild` to implement `Bridge`
   = note: required for `PolyChild` to implement `ForeignShape`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PolyChild: ResolveRecordId` is not satisfied
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ unsatisfied trait bound
   |
help: the trait `ResolveRecordId` is not implemented for `PolyChild`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:6:1
   |
 6 | enum PolyChild {
   | ^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveRecordId`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ `ParentModel`
   |
  ::: src/model/meta.rs
   |
   | impl ResolveRecordId for RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `appdb::prelude::RecordId`
...
   | impl ResolveRecordId for &RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&appdb::prelude::RecordId`
   = note: required for `PolyChild` to implement `ForeignLookupShape`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PolyChild: Crud` is not satisfied
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ unsatisfied trait bound
   |
help: the trait `Crud` is not implemented for `PolyChild`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:6:1
   |
 6 | enum PolyChild {
   | ^^^^^^^^^^^^^^
help: the trait `Crud` is implemented for `ParentModel`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^
   = note: required for `PolyChild` to implement `ForeignLookupShape`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PolyChild: Bridge` is not satisfied
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:21:21
   |
21 |     assert_bridge::<PolyChild>();
   |                     ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `ResolveRecordId` is not implemented for `PolyChild`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:6:1
   |
 6 | enum PolyChild {
   | ^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveRecordId`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ `ParentModel`
   |
  ::: src/model/meta.rs
   |
   | impl ResolveRecordId for RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `appdb::prelude::RecordId`
...
   | impl ResolveRecordId for &RecordId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&appdb::prelude::RecordId`
   = note: required for `PolyChild` to implement `Bridge`
note: required by a bound in `assert_bridge`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:11:21
   |
11 | fn assert_bridge<T: Bridge>() {}
   |                     ^^^^^^ required by this bound in `assert_bridge`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PolyChild: Bridge` is not satisfied
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:21:21
   |
21 |     assert_bridge::<PolyChild>();
   |                     ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Crud` is not implemented for `PolyChild`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:6:1
   |
 6 | enum PolyChild {
   | ^^^^^^^^^^^^^^
help: the trait `Crud` is implemented for `ParentModel`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:13:62
   |
13 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^
   = note: required for `PolyChild` to implement `Bridge`
note: required by a bound in `assert_bridge`
  --> tests/ui/store/nested_ref_enum_child_unsupported.rs:11:21
   |
11 | fn assert_bridge<T: Bridge>() {}
   |                     ^^^^^^ required by this bound in `assert_bridge`
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)
